# PerfectAudioWorks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  paw.desktop
src/: assets.qrc  main.cpp
src/AudioPharser/: AudioRingBuffer.c  AudioRingBuffer.h  CodecHandler.c  CodecHandler.h  PortAudioHandler.cpp  PortAudioHandler.h  faaddecoder.c  faaddecoder.h  ffmpegdecoder.c  ffmpegdecoder.h  libsndfiledecoder.c  libsndfiledecoder.h  mpg123decoder.c  mpg123decoder.h  portaudio_backend.c  portaudio_backend.h
src/PAW_GUI/: Enums.h  GlobalKeys.h  GlobalLinuxKeys.h  Proxy_style.h  ScrollingLabel.cpp  ScrollingLabel.h  about_paw_gui.cpp  about_paw_gui.ui  aboutfile_paw_gui.cpp  aboutfile_paw_gui.h  aboutfile_paw_gui.ui  loadingplaylists.cpp  loadingplaylists.h  loadingplaylists.ui  main_paw_widget.cpp  main_paw_widget.h  main_paw_widget.ui  playlist_paw_manager.cpp  playlist_paw_manager.h  playlist_paw_manager.ui  settings_paw_gui.cpp  settings_paw_gui.h  settings_paw_gui.ui
src/assets/: resources.rc
src/miscellaneous/: DatabaseManager.cpp  DatabaseManager.h  PluginManager.cpp  PluginManager.h  PythonEvent.cpp  PythonEvent.h  cross_platform_defs.h  file.c  file.cpp  file.h  json.cpp  json.h  misc.c  misc.h  python_bindings.cpp  python_bindings.h
